chore: Chore: Refactor GitHub Actions workflow
- This commit refactors the GitHub Actions workflow to streamline the
  process of pushing new Go module versions to the proxy and creating
  GitHub releases.
- The previous workflow was overly simplistic and lacked features for
  generating changelogs and handling pre-releases.
- This revision introduces a more robust solution incorporating
  changelog generation from git history, proper version extraction, and
  the use of the `actions/create-release` action for automated release
  creation.
- Specifically, the workflow now correctly handles pre-release versions
  and includes a changelog in the release notes.
- This improves the overall release process, making it more efficient
  and informative for users.
- Building upon the previous additions of configurable logging
  (06fd9cf0) and the Go workflow itself (0c772290), this change
  completes a more integrated and automated release pipeline.

--- a/.github/workflows/go-proxy.yml
+++ b/.github/workflows/go-proxy.yml
@@ -1,4 +1,4 @@
-name: Push to Go Proxy
+name: Push to Go Proxy and Create Release
 
 on:
   push:
@@ -6,26 +6,62 @@ on:
       - 'v*'  # Triggers on version tags like v1.0.0, v2.1.3, etc.
 
 jobs:
-  push-to-goproxy:
+  push-to-goproxy-and-release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required for creating releases
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Fetch full history for changelog generation
 
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version: '1.24.4'  # Match the version in go.mod
 
-    - name: Get tag name
-      id: get_tag
-      run: echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+    - name: Get tag name and version
+      id: get_version
+      run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        VERSION=${TAG_NAME#v}  # Remove 'v' prefix for version
+        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_OUTPUT
+        echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+        echo "Tag: $TAG_NAME, Version: $VERSION"
+
+    - name: Generate changelog
+      id: changelog
+      run: |
+        # Get the previous tag
+        PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+
+        if [ -z "$PREV_TAG" ]; then
+          echo "CHANGELOG=Initial release" >> $GITHUB_OUTPUT
+        else
+          echo "CHANGELOG<<EOF" >> $GITHUB_OUTPUT
+          echo "## Changes since $PREV_TAG" >> $GITHUB_OUTPUT
+          echo "" >> $GITHUB_OUTPUT
+          git log --pretty=format:"- %s (%h)" $PREV_TAG..HEAD >> $GITHUB_OUTPUT
+          echo "" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Run tests
+      run: |
+        go mod tidy
+        go test ./...
+
+    - name: Build and verify module
+      run: |
+        echo "Building and verifying Go module..."
+        go build ./...
 
     - name: Push module to Go proxy
       run: |
-        echo "Pushing module github.com/csmart-libs/gin-logger@${{ steps.get_tag.outputs.TAG_NAME }} to Go proxy..."
-        GOPROXY=proxy.golang.org go list -m github.com/csmart-libs/gin-logger@${{ steps.get_tag.outputs.TAG_NAME }}
+        echo "Pushing module github.com/csmart-libs/gin-logger@${{ steps.get_version.outputs.TAG_NAME }} to Go proxy..."
+        GOPROXY=proxy.golang.org go list -m github.com/csmart-libs/gin-logger@${{ steps.get_version.outputs.TAG_NAME }}
 
     - name: Verify module availability
       run: |
@@ -34,3 +70,32 @@ jobs:
         sleep 10
         # Try to fetch the module info to verify it's available
         go list -m -versions github.com/csmart-libs/gin-logger
+
+    - name: Create GitHub Release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.get_version.outputs.TAG_NAME }}
+        release_name: Release ${{ steps.get_version.outputs.TAG_NAME }}
+        body: |
+          # Release ${{ steps.get_version.outputs.TAG_NAME }}
+
+          ${{ steps.changelog.outputs.CHANGELOG }}
+
+          ## Installation
+
+          ```bash
+          go get github.com/csmart-libs/gin-logger@${{ steps.get_version.outputs.TAG_NAME }}
+          ```
+
+          ## Go Module
+
+          This release is available on the Go module proxy at:
+          - https://proxy.golang.org/github.com/csmart-libs/gin-logger/@v/${{ steps.get_version.outputs.TAG_NAME }}.info
+
+          ## Verification
+
+          Module has been successfully pushed to Go proxy and is available for use.
+        draft: false
+        prerelease: ${{ contains(steps.get_version.outputs.TAG_NAME, '-') }}
